# silverdaw

./: .editorconfig  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTEXT.md  DECISIONS.md  INSTALL.md  README.md  THIRD_PARTY_LICENSES.md
backend/: .clang-format  .clang-tidy  .clangd  CMakeLists.txt
backend/cmake/: SilverdawDiscoverTests.cmake  SilverdawRunCoverage.cmake
backend/resources/midi-mappings/: README.md  denon-mc7000.json  hercules-djcontrol-compact-family.json  hercules-djcontrol-inpulse-200.json  hercules-djcontrol-inpulse-300.json  hercules-djcontrol-inpulse-500.json  numark-dj2go2-touch.json  numark-mixtrack-3.json  pioneer-compact-legacy.json  pioneer-ddj-200.json  pioneer-ddj-400-family.json  pioneer-ddj-common-master.json  pioneer-ddj-common.json  pioneer-ddj-high-end.json  pioneer-ddj-rev5.json  pioneer-ddj-rev7.json  pioneer-ddj-sx3.json  pioneer-opus-quad.json  pioneer-xdj-aero-r1.json  pioneer-xdj-modern.json  pioneer-xdj-rx.json  reloop-beatmix-mk2.json
backend/src/: AudioConstants.h  AudioDeviceCommands.cpp  AudioDeviceCommands.h  AudioEngine.cpp  AudioEngine.h  AudioEngineWarpFactory.h  BpmDetector.cpp  BpmDetector.h  BridgeAuth.cpp  BridgeDispatch.h  BridgeServer.cpp  BridgeServer.h  BusGraph.h  ClipCommands.cpp  ClipCommands.h  CommandHelpers.h  DecodedCache.cpp  DecodedCache.h  EditUndoState.cpp  EditUndoState.h  Leveler.h  LibraryAnalysis.h  LibraryCommands.cpp  Log.cpp  Log.h  LoudnessAnalyzer.cpp  LoudnessAnalyzer.h  Main.cpp  MixdownBroadcast.cpp  MixdownCommands.cpp  MixdownEngine.cpp  MixdownEngine.h  MixdownExport.cpp  MixdownExport.h  MixdownGraph.cpp  MixdownNormalize.h  MixdownRender.cpp  MixdownTiming.h  OutputKeepAlive.h  PayloadHelpers.h  (+30 more)
backend/src/bridge/: BridgeAuth.h  BridgeDispatch.cpp  BridgeDispatch.h  BridgeServer.cpp  BridgeServer.h  CommandHelpers.cpp  CommandHelpers.h  PayloadHelpers.h  PlayheadEmitter.cpp  PlayheadEmitter.h
backend/src/commands/: AudioDeviceCommands.cpp  AudioDeviceCommands.h  BeatRepeatCommands.cpp  BeatRepeatCommands.h  ClipCommands.cpp  ClipCommands.h  LibraryCommands.cpp  LibraryCommands.h  MarkerCommands.cpp  MarkerCommands.h  MidiDeviceCommands.cpp  MidiDeviceCommands.h  MixdownCommands.cpp  MixdownCommands.h  PeakJobCoordinator.cpp  PeakJobCoordinator.h  PreviewCommands.cpp  PreviewCommands.h  ProjectCommands.cpp  ProjectCommands.h  ProjectFxCommands.cpp  ProjectFxCommands.h  ProjectImportCommands.cpp  ProjectImportSource.cpp  ProjectImportSource.h  ProjectSettingsCommands.cpp  ProjectSettingsCommands.h  ScratchPatternCommands.cpp  ScratchPatternCommands.h  ScratchPatternReplayCommands.cpp  ScratchPatternReplayCommands.h  ScratchSaveCommands.cpp  ScratchSaveCommands.h  ScratchSessionCommands.cpp  ScratchSessionCommands.h  StemSeparationCommands.cpp  StemSeparationCommands.h  TrackCommands.cpp  TrackCommands.h  TransitionCommands.cpp  (+7 more)
backend/src/core/: CrashHandler.cpp  CrashHandler.h  Log.cpp  Log.h  Main.cpp  Version.h.in
backend/src/dsp/: BackspinSnapshot.h  BassEnhancer.cpp  BassEnhancer.h  BitCrusher.h  BitCrusherParameters.h  BpmAnalysisHelpers.cpp  BpmAnalysisHelpers.h  BpmDetector.cpp  BpmDetector.h  BrakeSnapshot.h  BreakpointCurve.h  ChannelSplitDsp.h  Dereverberator.cpp  Dereverberator.h  DrumEnhancer.cpp  DrumEnhancer.h  DspSmooth.h  EdgeFadeSnapshot.h  EnhancerDsp.cpp  EnhancerDsp.h  EnvelopeSnapshot.h  Leveler.h  LoudnessAnalyzer.cpp  LoudnessAnalyzer.h  OtherEnhancer.cpp  OtherEnhancer.h  Punch.h  SafetyLimiter.cpp  SafetyLimiter.h  Saturation.h  SaturationParameters.h  SharedFx.cpp  SharedFx.h  ToneEq.cpp  ToneEq.h  TrackChain.h  VinylScratchProcessor.cpp  VinylScratchProcessor.h  VocalDebleeder.cpp  VocalDebleeder.h  (+10 more)
backend/src/engine/: AudioConstants.h  AudioEngine.cpp  AudioEngine.h  AudioEngineAudibility.cpp  AudioEngineBeatRepeat.cpp  AudioEngineClipEdit.cpp  AudioEngineClips.cpp  AudioEngineDevice.cpp  AudioEngineGraphState.h  AudioEngineMix.cpp  AudioEnginePatternReplay.cpp  AudioEnginePlaybackState.h  AudioEnginePreview.cpp  AudioEngineScratch.cpp  AudioEngineScratchState.h  AudioEngineTransport.cpp  AudioEngineWarpFactory.h  BeatRepeatProcessor.cpp  BeatRepeatProcessor.h  BeatRepeatSnapshot.cpp  BeatRepeatSnapshot.h  BusGraph.cpp  BusGraph.h  BusGraphRender.cpp  BusGraphTrackFx.cpp  DecodedCache.cpp  DecodedCache.h  EnginePlaybackPath.cpp  EnginePlaybackPath.h  MasterClockSource.h  MeteringSource.h  Metronome.h  OffsetSource.cpp  OffsetSource.h  OffsetSourceTailRender.cpp  OffsetSourceWarpRender.cpp  OutputDeviceClassifier.cpp  OutputDeviceClassifier.h  OutputKeepAlive.h  PreviewMetronomeSource.h  (+1 more)
backend/src/midi/: MidiControllerMapping.cpp  MidiControllerMapping.h  MidiControllerProfiles.cpp  MidiControllerProfiles.h  MidiScratchRouting.cpp  MidiScratchRouting.h  PioneerDeckMapping.cpp  PioneerDeckMapping.h
backend/src/mixdown/: MixdownBroadcast.cpp  MixdownBroadcast.h  MixdownDither.h  MixdownEngine.cpp  MixdownEngine.h  MixdownExport.cpp  MixdownExport.h  MixdownGraph.cpp  MixdownGraph.h  MixdownNormalize.cpp  MixdownNormalize.h  MixdownRender.cpp  MixdownRender.h  MixdownRenderPass1.cpp  MixdownRenderPass1.h  (+2 more)
backend/tests/: AudioEngineTests.cpp  AutomationTests.cpp  BackendTests.cpp  BackingMonitorSourceTests.cpp  BassEnhancerTests.cpp  BeatRepeatTests.cpp  BpmDetectorTests.cpp  BridgeTests.cpp  BsRoformerSpectralTests.cpp  DereverberatorTests.cpp  DrumEnhancerTests.cpp  EnvelopeFadeTests.cpp  FxDspTests.cpp  LibraryCleanupTests.cpp  LoudnessTests.cpp  MelRoformerSpectralTests.cpp  MidiControllerMappingTests.cpp  MixdownRenderTests.cpp  OtherEnhancerTests.cpp  PersistenceTests.cpp  PioneerDeckMappingTests.cpp  ProjectStateFxTests.cpp  ProjectStateTests.cpp  ScratchDspTests.cpp  ScratchPatternEvaluatorTests.cpp  ScratchPatternPersistenceTests.cpp  ScratchPatternReplayProjectStateTests.cpp  ScratchProtocolTests.cpp  ScratchRecorderTests.cpp  ScratchSessionTests.cpp  ScratchTestFixtures.h  StemSeparationTests.cpp  TestRegistry.h  TestSupport.h  VocalDenoiserTests.cpp  VocalEnhancerTests.cpp  VocalRestorerTests.cpp  WarpTests.cpp
(+753 files in other folders)
